# dob-decoder-standalone-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  settings.mainnet.toml  settings.toml
src/: client.rs  decoder.rs  lib.rs  main.rs  server.rs  types.rs  vm.rs
src/decoder/: helpers.rs  mod.rs
src/tests/: decoder.rs  legacy_decoder.rs  mod.rs
src/tests/dob0/: decoder.rs  legacy_decoder.rs  mod.rs
src/tests/dob1/: decoder.rs
src/tests/dob_ring/: client.rs  decoder.rs  mod.rs
src/types/: error.rs  mod.rs  object.rs
