[package]
name = "dob-decoder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-sdk = "=3.1.0"
ckb-types = "0.114.0"
ckb-jsonrpc-types = "0.114.0"
ckb-hash = "0.114.0"
thiserror = "1.0"
serde_json = "1.0"
hex = "0.4.3"
reqwest = { version = "0.12.4", features = ["json"] }
jsonrpc-core = "18.0"
serde = { version = "1.0", features = ["serde_derive"] }

spore-types = { git = "https://github.com/sporeprotocol/spore-contract", rev = "81315ca" }

jsonrpsee = { version = "0.22.3", features = ["server", "macros"], optional = true }
toml = { version = "0.8.2", optional = true }
tokio = { version = "1.37", features = ["rt", "signal"], optional = true }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"], optional = true }

lazy_static = { version = "1.4", optional = true }
ckb-vm = { version = "0.24", features = ["asm"], optional = true }

[features]
default = ["standalone_server", "embeded_vm", "render_debug"]
standalone_server = ["jsonrpsee", "toml", "tokio", "tracing-subscriber"]
embeded_vm = ["ckb-vm", "lazy_static"]
render_debug = []
